# trajectory-modeling

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.run/: predict-bayes.run.xml  predict-deep.run.xml  predict-gam.run.xml  tests-pytest.run.xml  train-bayes.run.xml  train-deep.run.xml  train-gam.run.xml
code/: bayesian_trajs.py  deep_trajs.py  deep_trajs_preprocessing.py  deep_trajs_train.py  gam_trajs.py  gpt_sugg_initial.py  main.py  simulate_deep_traj.py  simulations.py  traj_class_functions.py
code/saved_configs/: environment.yml  requirements.txt
code/test_res/: traj_covs_sim.csv
configs/: bayes.yaml  data.yaml  deep.yaml  gam.yaml
scripts/: predict_ps.py  simulate_data.py  train.py
src/traj_ps/: __init__.py  config.py  interfaces.py
src/traj_ps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/traj_ps/backends/bayes/: __init__.py  classify.py  model.py  pipeline.py  sampling.py
src/traj_ps/backends/deep/: __init__.py  model.py
src/traj_ps/backends/deep/econders/: grud.py  meanpool.py
src/traj_ps/backends/deep/heads/: cox_binned.py
src/traj_ps/backends/gam/: __init__.py  align.py  model.py
src/traj_ps/data/: aggregate.py  collate.py  counting.py  dataset.py  dual_prep.py  simulate.py
src/traj_ps/evaluation/: benchmarks.py  diagnostics.py
src/traj_ps/inference/: export_embed.py  predict_ps.py
tests/: conftest.py  test_config_and_inference.py  test_smoke_backends.py
tools/: run-trajps.ps1  setup-extras.ps1
