[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traj_ps"
version = "0.1.0"
description = "TrajPS: Trajectory-based propensity score modeling (Deep, Bayesian, GAM)"
authors = [{ name = "Tammy Wertheimer" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22,<2.0",
  "pandas>=1.5",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
deep = [
  "torch>=2.0",
  "tqdm>=4.66",
]
bayes = [
  "pymc>=5.10",        # Bayesian splines
  "arviz>=0.15",
  "pytensor>=2.18",    # or aesara if you pinned earlier
  "patsy>=0.5.3",
  "joblib>=1.3",
  "lifelines>=0.27",
]
gam = [
  "pygam==0.9.0",      # GAM spline fitting
  "scipy<=1.10.1",
  "numpy<=1.26.4",
  "joblib>=1.3",
  "lifelines>=0.27",
]

all = ["traj_ps[deep,bayes,gam]"]

[tool.setuptools.packages.find]
where = ["src"]